--- a/data/others/css/tyranocustom.css
+++ b/data/others/css/tyranocustom.css
@@ -60,5 +60,5 @@
 /*---------------------------------------------------------------------------------*/
 @font-face {
 	font-family:"JKG-M_3";
-	src:url("../../data/others/JKG-M_3.ttf") format("truetype");
+	src:url("../JKG-M_3.ttf") format("truetype");
 }
